// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`hud overlay at 100x32 1`] = `
"                                                                                                    
  SPOTUIFY  ·  ENGINE                                                    austinsmith23  ·  PREMIUM  
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
  MISS YOU - BONUS TRACK                                                                            
  Oliver Tree, Robin Schulz                                                                         
  Alone In A Crowd                                                                                  
                                                                                                    
  ▶  1:35 █████████████████████████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░  3:26    
  PLAYING   ·   spotuify   ·   VOL 100%                                                             
                                                                                                    
 SPACE play/pause  N next  P prev  ←/→ seek  ↑/↓ volume  S shuffle  Z repeat  R sync  Q quit        
"
`;

exports[`hud overlay at 80x24 1`] = `
"                                                                                
  SPOTUIFY  ·  ENGINE                                austinsmith23  ·  PREMIUM  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  MISS YOU - BONUS TRACK                                                        
  Oliver Tree, Robin Schulz                                                     
  Alone In A Crowd                                                              
                                                                                
  ▶  1:35 ████████████████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░  3:26    
  PLAYING   ·   spotuify   ·   VOL 100%                                         
                                                                                
 SPACE  N  P  ←/→  ↑/↓  S  Z  R  Q                                              
"
`;
